# duodecimal-notation

./: LICENSE  README.md  pyproject.toml
duodecimal_notation/: cli.py  convert.py  test_convert.py
duodecimal_notation/docs/: duodecimal-notation.md
