[tool.poetry]
name = "duodecimal-notation"
version = "0.1.0"
description = ""
authors = ["Oliver Spindler <os@oliverspindler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
